# Conway-SFML

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Core/: Application.hpp
include/Game/: Game.hpp  Grid.hpp
include/core/: application.hpp  config.hpp
include/game/: cell.hpp  game.hpp  grid.hpp
include/graphics/: livingCell.hpp
src/: CMakeLists.txt  main.cpp
src/Game/: Cell.cpp  Grid.cpp
src/core/: application.cpp
src/game/: cell.cpp  grid.cpp
testing/: CMakeLists.txt  GridTesting.cpp  gridtest.cpp
